<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistroListaIngesta">


    <TextView
        android:id="@+id/tv_id_RA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registros"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:id="@+id/ly_id_rli"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="100"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_id_identificador_rli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/id_rli"/>
        <TextView
            android:id="@+id/tv_id_fecha_rli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="52"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/fecha_rli"/>
        <TextView
            android:id="@+id/tv_id_sumatorio_rli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumHC_rli"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_weight="14"/>
        <TextView
            android:id="@+id/tv_id_boloC_rli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/boloC_rli"/>
    </LinearLayout>
    <ListView
        android:id="@+id/lv_id_listaingesta_rli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:divider="@color/cardview_shadow_end_color"
        android:dividerHeight="10dp"
        android:smoothScrollbar="true"
        android:footerDividersEnabled="false"
        android:drawSelectorOnTop="false"
        android:layout_marginTop="100dp"
        android:scrollbars="vertical">
    </ListView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_consultar_rli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:onClick="consultarItemLista"
        app:fabSize="normal"
        android:src="@drawable/ic_arrow_forward_white_24dp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_margin="16dp" />

</android.support.design.widget.CoordinatorLayout>