<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly1_id_Incidencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:showIn="@layout/activity_incidencias">

        <TextView
            android:id="@+id/tv_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_incidencia"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark" />
        <Spinner
            android:id="@+id/sp_incidencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scrollbarAlwaysDrawVerticalTrack="true" />

        <TextView
            android:id="@+id/tv_observaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_observaciones"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="40dp" />
        <EditText
            android:id="@+id/et_observaciones"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:inputType= "text"/>
        <Button
            android:id="@+id/bt_incidencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_guardar"
            android:background="@drawable/btn_Incidencias"
            android:textColor="#ffffff"
            android:onClick="incidenciasOnClick"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
